k8s/ingress/common-ingress-spinnaker.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-common-ingress
  namespace: spinnaker
spec:
  rules:
  - host: jenkins.spinnaker.gcloud.srcb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: spinnaker-jenkins
          servicePort: 8080
  - host: jenkins.gcloud.srcb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
  - host: spinnaker.gcloud.srcb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: spinnaker-spinnaker-deck
          servicePort: 9000
