k8s/ingress/registry.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
spec:
#  tls:
#  - hosts:
#    - docker.registry.gcloud.bst-1.cns.bstjpc.com
#    secretName: docker-registry-tls
  rules:
  - host: docker.registry.gcloud.bst-1.cns.bstjpc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry-docker-registry
          servicePort: 5000
